--- a/src/main/resources/templates/fragments/navBar.html
+++ b/src/main/resources/templates/fragments/navBar.html
@@ -54,7 +54,7 @@
             <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" aria-haspopup="true"
                aria-expanded="false"> <i class="fa fa-book-open"></i> Report</a>
             <div class="dropdown-menu text-dark" aria-labelledby="dropdownId">
-               <a data-th-href="@{'/'}" class="nav-link text-dark"> Report</a>
+               <a data-th-href="@{'/report/instituteEmployee'}" class="nav-link text-dark"> Institute Employee Report</a>
                <a data-th-href="@{'/'}" class="nav-link text-dark"> All </a>
             </div>
          </li>
