InstituteEmployee report was competed

--- a/src/main/resources/templates/institute/institute-detail.html
+++ b/src/main/resources/templates/institute/institute-detail.html
@@ -20,7 +20,7 @@
         <div class="col">
             <h2  class="text-center">
                 <strong>
-                    <p data-th-text="${instituteDetail.name}"></p>
+                    <span data-th-text="${instituteDetail.name}"></span>
                 </strong>
             </h2>
         </div>
