Offence employee report was created

--- a/src/main/resources/templates/offence/offence-detail.html
+++ b/src/main/resources/templates/offence/offence-detail.html
@@ -53,7 +53,7 @@
                     </div>
                     <div class="col-md-4">
                         <p class="display_detail" id="mainCategory"
-                           data-th-text="${offenceDetail.getOffenceType.offenceType}"></p>
+                           data-th-text="${offenceDetail.offenceType.offenceType}"></p>
                     </div>
                 </div>
                 <!--Name-->
