--- a/src/main/resources/templates/fragments/navBar.html
+++ b/src/main/resources/templates/fragments/navBar.html
@@ -55,7 +55,8 @@
                aria-expanded="false"> <i class="fa fa-book-open"></i> Report</a>
             <div class="dropdown-menu text-dark" aria-labelledby="dropdownId">
                <a data-th-href="@{'/report/instituteEmployee'}" class="nav-link text-dark"> Institute Employee Report</a>
-               <a data-th-href="@{'/'}" class="nav-link text-dark"> All </a>
+               <a data-th-href="@{'/report/employeeAllCount'}" class="nav-link text-dark">Employee And Action </a>
+               <a data-th-href="@{'/report/offenceCount'}" class="nav-link text-dark">Offence And Record Count </a>
             </div>
          </li>
       </ul>
