some bootstrap was changed

--- a/src/main/resources/templates/commendation/commendation-detail.html
+++ b/src/main/resources/templates/commendation/commendation-detail.html
@@ -33,7 +33,7 @@
     </div>
 </div>
 <!--details-->
-<div class="container-fluid bg-info " >
+<div class="container-fluid " >
     <div data-th-replace="~{employee/employeeDetail :: employeeDetailsFragment}" ></div >
     <div class="col-sm-12 flex-column " data-th-fragment="commendationDetailsFragment">
         <div class="row">
