--- a/src/main/resources/templates/offence/addOffence.html
+++ b/src/main/resources/templates/offence/addOffence.html
@@ -33,7 +33,7 @@
     </div>
 </div>
 <!--Form Content-->
-<div class="container-fluid bg-info ">
+<div class="container-fluid ">
     <div class="col-sm-12 flex-column ">
         <form class="form-horizontal" data-th-action="${addStatus==true?'/offence/save':'/offence/update'}"
               data-th-object="${offence}"
