--- a/src/main/resources/templates/commendation/commendation.html
+++ b/src/main/resources/templates/commendation/commendation.html
@@ -31,7 +31,7 @@
         </div>
     </div>
 </div>
-<div class="container-fluid bg-info  text-center">
+<div class="container-fluid text-center">
     <!--Table view-->
     <div class="col">
         <div class="col" id="instituteListPresent" data-th-if="${not #lists.isEmpty(commendations)}">
