--- a/src/main/resources/templates/institute/institute-detail.html
+++ b/src/main/resources/templates/institute/institute-detail.html
@@ -33,7 +33,7 @@
     </div>
 </div>
 <!--details-->
-<div  class="container-fluid bg-info ">
+<div  class="container-fluid  ">
     <div class="col-sm-12 flex-column " data-th-fragment="instituteDetailsFragment">
         <div class="row">
             <div class="form-group col-md-12 col-sm-12 text-center flex-column ">
