--- a/src/main/resources/templates/offence/offence.html
+++ b/src/main/resources/templates/offence/offence.html
@@ -32,7 +32,7 @@
         </div>
     </div>
 </div>
-<div class="container-fluid bg-info  text-center">
+<div class="container-fluid text-center">
     <!--Table view-->
     <div class="col">
         <div class="col" id="instituteListPresent" data-th-if="${not #lists.isEmpty(offences)}">
