add employee form was changed

--- a/src/main/resources/templates/employee/addEmployee.html
+++ b/src/main/resources/templates/employee/addEmployee.html
@@ -234,7 +234,7 @@
           <!--Mobile Number One-->
           <div class="form-row text-right" >
             <div class="col-md-4" >
-              <label class="control-label" for="mobileOne" >Contact no 1 :</label >
+              <label class="control-label" for="mobileOne" >Contact One :</label >
             </div >
             <div class="col-md-8" >
               <input id="mobileOne" data-th-field="*{mobileOne}" class="form-control mobile" tabindex="13"
@@ -249,7 +249,7 @@
           <!--Mobile Number Two-->
           <div class="form-row text-right" >
             <div class="col-md-4" >
-              <label class="control-label" for="mobileTwo" >Contact no 2:</label >
+              <label class="control-label" for="mobileTwo" >Contact Two:</label >
             </div >
             <div class="col-md-8" >
               <input id="mobileTwo" data-th-field="*{mobileTwo}" class="form-control mobile" tabindex="14"
