user detail issue was fixed

--- a/src/main/resources/templates/user/user-detail.html
+++ b/src/main/resources/templates/user/user-detail.html
@@ -99,9 +99,8 @@
     </div>
 </div>
 
-<!--footer include-->
-<div id="footer" class="page-footer"></div>
+<div data-th-replace="~{fragments/footer :: footerFragment}" ></div >
 <!--script include-->
-<script id="script"></script>
+<div data-th-replace="~{fragments/script :: scriptFragment}" ></div >
 </body>
 </html>
